force-app/main/default/objects/sked__Templated_Resource_Requirement__c/sked__Templated_Resource_Requirement__c.object-meta.xml
<CustomObject>
    <label>Templated Resource Requirement</label>
    <nameField>
        <displayFormat>TRR-{0000}</displayFormat>
        <label>Templated Resource Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Resource Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>