force-app/main/default/objects/sked__Templated_Resource_Requirement__c/fields/sked__Description__c.field-meta.xml
<CustomField>
    <fullName>sked__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>