force-app/main/default/objects/sked__Templated_Resource_Requirement__c/validationRules/sked__RelativeStartNullIfTimeSourceFalse.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__RelativeStartNullIfTimeSourceFalse</fullName>
    <active>true</active>
    <errorConditionFormula>AND( sked__Job_Allocation_Time_Source__c = false, NOT( ISNULL( sked__Relative_Start__c ) ) )</errorConditionFormula>
    <errorDisplayField>sked__Relative_Start__c</errorDisplayField>
    <errorMessage>Relative Start must be null if Job Allocation Time Source is false</errorMessage>
</ValidationRule>