force-app/main/default/objects/sked__Templated_Resource_Requirement__c/validationRules/sked__StartOffsetDaysNonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartOffsetDaysNonNegative</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Start Offset Days must be null or non-negative</errorMessage>
</ValidationRule>