force-app/main/default/objects/sked__Templated_Resource_Requirement__c/validationRules/sked__TimeSourceMustHaveDuration.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__TimeSourceMustHaveDuration</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Duration must be set if Job Allocation Time Source is true</errorMessage>
</ValidationRule>